--- a/index.html
+++ b/index.html
@@ -10,9 +10,25 @@
 </head>
 
 <body>
-    <div>
+    <main>
+        <div class="main__wrapper">
+            <div class="main__form">
+                <h1>Develop Your Life With <span>One Step</span></h1>
+                <p>Pushing the possibilities of the internet. Good for
+                    the last software. Make it A software night.</p>
+                <div class="main__form btn">
+                    <input name="input" type="text" placeholder="Enter your email" />
+                    <button type="submit">Send</button>
+                </div>
+                <div class="main__link">
+                    <a href="#" class="google"></a>
+                    <a href="#" class="apple"></a>
+                </div>
 
-    </div>
+            </div>
+
+        </div>
+    </main>
 
 </body>
 
