--- a/index.html
+++ b/index.html
@@ -16,4 +16,12 @@
 
 </body>
 
+<footer>
+    <img src="img class/google.jpg" alt="google">
+    <img src="img class/avast.jpg" alt="avast">
+    <img src="img class/ebay.jpg" alt="ebay">
+    <img src="img class/paypal.jpg" alt="paypal">
+    <img src="img class/Home.jpg" alt="home">
+</footer>
+
 </html>
