--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="null.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&family=Raleway&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -26,6 +31,10 @@
                     <a href="#" class="apple"></a>
                 </div>
 
+
+            </div>
+            <div class="main__img">
+                <img src="img/Group 746.png" alt="telephone">
             </div>
 
         </div>
