--- a/index.html
+++ b/index.html
@@ -5,15 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
-
 <body>
-    <div>
-
-    </div>
-
+    <header>
+        <div class="container">
+            <div id="logo">
+                <a href="#"><img src="assets/images/Logo.png"     alt=""></a>
+            </div>
+            <nav id="main_menu">
+                <ul>
+                    <li><a href="#">Feature</a></li>
+                    <li><a href="#">Download</a></li>
+                    <li><a href="#">Pricing</a></li>
+                </ul>
+            </nav>
+            <div class="header_buttons">
+                <button type="button" class="btn btn-white">Login</button>
+                <button type="button" class="btn btn-red">Sign up</button>
+            </div>
+        </div>
+    </header>
 </body>
-
 </html>
