--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
     <main>
         <div class="main__wrapper">
             <div class="main__form">
-                <h1>Develop Your Life With <span>One Step</span></h1>
+
+                <h1>Develop Your Life<br> With <span>One Step</span></h1>
+
                 <p>Pushing the possibilities of the internet. Good for
-                    the last software. Make it A software night.</p>
-                <div class="main__form btn">
+                    the last software. <span> Make it A software night.</span></p>
+                <div class="main__form_btn">
                     <input name="input" type="text" placeholder="Enter your email" />
-                    <button type="submit">Send</button>
+                    <button type="submit" class="btn">Send</button>
                 </div>
                 <div class="main__link">
-                    <a href="#" class="google"></a>
-                    <a href="#" class="apple"></a>
+                    <a href="https://www.google.com.ua/?hl=ru" class="google"><img src="/img/Daco_4455921 1.png"
+                            alt="google"></a>
+                    <a href="https://www.apple.com/ua/" class="apple"><img src="/img/Daco_4455921 2.png"
+                            alt="google"></a>
                 </div>
 
 
