--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="main__wrapper">
             <div class="main__form">
 
-                <h1>Develop Your Life<br> With <span>One Step</span></h1>
+                <h1>Develop Your Life<br> With <span>One Step.</span></h1>
 
                 <p>Pushing the possibilities of the internet. Good for
                     the last software. <span> Make it A software night.</span></p>
