--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <button type="submit" class="btn">Send</button>
                 </div>
                 <div class="main__link">
-                    <a href="https://www.google.com.ua/?hl=ru" class="google"><img src="/img/Daco_4455921 1.png"
+                    <a href="https://www.google.com.ua/?hl=ru" class="google"><img src="img/Daco_4455921 1.png"
                             alt="google"></a>
-                    <a href="https://www.apple.com/ua/" class="apple"><img src="/img/Daco_4455921 2.png"
+                    <a href="https://www.apple.com/ua/" class="apple"><img src="img/Daco_4455921 2.png"
                             alt="google"></a>
                 </div>
 
