--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&family=Raleway&display=swap"
         rel="stylesheet">
     <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
